fix: description not properly visible issue

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -788,7 +788,6 @@ a:focus {
     word-wrap: break-word;
     white-space: normal;
     max-height: 2.2em;
-    overflow: hidden;
     box-sizing: border-box;
     text-overflow: ellipsis;
     line-height: 1em;
